first real commit

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -2,15 +2,14 @@ section(class="canvas front" id="front")
 
     div(class="content")
 
-        h2 Headline
+        h2 Welcome to Plaza
 
         div
 
-            p Good spot for a tagline.
+            p We're social and its time that our finances are too.
 
             div
 
-                a(href="#section-2") Button 1
-                a(href="#section-3") Button 2
+                a(href="#section-2") Join the Waiting List.
 
     +nav-1({ target: "section-1", direction: "next" })
